--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,14 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
 
-body{
-	margin:0px;
-	padding:0px;
-	background-color:hsl(30, 38%, 92%);
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0px;
+	padding: 0px;
+	background-color: hsl(30, 38%, 92%);
 	width: 100vw;
 	height: 100vh;
 	display: flex;
@@ -12,135 +16,147 @@ body{
 	align-items: center;
 }
 
-a{
-	text-decoration: none;
+main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	overflow: hidden;
 }
 
-p{
-	font: 14px 'Montserrat';
-	line-height: 1.5em;
+h1 {
+	font: 32px/1 'Fraunces';
+	color: #1C232B;
+}
+
+p {
+	font-family: 'Montserrat';
 	color: hsl(228, 12%, 48%);
 }
 
-main{
-	display:flex;
-	justify-content: center;
-	align-items: center;
+#product-img {
+	width: 300px;
+	height: 450px;
+	background: url("../images/image-product-desktop.jpg") center/cover no-repeat;
 }
 
-section{
+#product-desc {
+	width: 300px;
+	height: 450px;
+	background-color: white;
+}
+
+#product-desc>div {
 	margin-left: 30px;
 	margin-right: 30px;
 }
 
-#product-img{
-	height: 450px;
-	width: 300px;
-	border-radius: 10px 0px 0px 10px;
-	background-image: url("../images/image-product-desktop.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
+#item-type {
+	height: 15px;
+	margin-top: 32px;
+	font: 12px/1'Montserrat';
+	letter-spacing: 5px;
 }
 
-#product-desc{
-	height: 450px;
-	width: 300px;
-	background-color:white;
-	border-radius: 0px 10px 10px 0px;
-}
-
-#item-type{
-	margin-top: 30px;
-	letter-spacing: 0.25em;
-}
-
-#item-name{
+#item-name {
+	height: 96px;
+	margin-top: 20px;
 	font: 34px 'Fraunces';
-	line-height: 1em;
+	font: 14px/23px 'Montserrat';
 }
 
-#item-desc > p {
+#item-desc{
+	height: 92px;
+	margin-top: 24px;
+}
+
+#item-desc>p {
 	font-size: 15px;
 }
 
-#item-price{
-	display:flex;
+#item-price {
+	height: 32px;
+	display: flex;
 	align-items: center;
-	margin-top: 30px;
+	margin-top: 29px;
 }
 
-#new-price{
-	font: 34px 'Fraunces';
-	color:hsl(158, 36%, 37%);
+#new-price {
+	font: 32px 'Fraunces';
+	color: hsl(158, 36%, 37%);
 }
 
-#old-price{
+#old-price {
 	margin-left: 20px;
-	font-family: 'Montserrat';
+	font: 13px 'Montserrat';
 	text-decoration: line-through;
-	text-decoration-color:hsl(228, 12%, 48%); 
-	font-size: 14px;
-	color:hsl(228, 12%, 48%);
+	color: hsl(228, 12%, 48%);
 }
 
-#item-button{
-	display:flex;
+#item-button {
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin-top: 30px;
-	background-color:hsl(158, 36%, 37%);
-	height: 45px;
+	background-color: hsl(158, 36%, 37%);
+	height: 48px;
 	width: 240px;
 	border-radius: 10px;
 }
 
-#item-button > div{
-	margin-left: 5px;
-	margin-right: 5px;
+#item-button>div {
+	margin-left: 6px;
+	margin-right: 6px;
 }
 
-#item-button:hover{
-	background-color:hsl(156, 59%, 25%);
+#item-button:hover {
+	cursor: pointer;
+	background-color: hsl(156, 59%, 25%);
 }
 
-#item-button:focus{
-	background-color:hsl(15, 59%, 25%);
+#item-button:focus {
+	background-color: hsl(15, 59%, 25%);
 }
 
-#button-text{
+#button-text {
 	font: 14px 'Montserrat';
-	color:white; 
-	padding-bottom: 4px;
+	color: white;
 }
+
+
+
+/* ##################### MOBILE VERSION ##################### */
+
+
 
 @media screen and (max-width: 480px) {
-	
-	article{
+
+	article {
 		flex-wrap: wrap;
 	}
-	
-	#product-img{
+
+	#product-img {
 		height: 240px;
 		width: 340px;
 		border-radius: 10px 10px 0px 0px;
-		background-image:url("../images/image-product-mobile.jpg");
+		background-image: url("../images/image-product-mobile.jpg");
 	}
-	
-	#product-desc{
+
+	#product-desc {
 		height: 370px;
 		width: 340px;
 		border-radius: 0px 0px 10px 10px;
 	}
-	
-	#item-name{
+
+	#item-name {
 		font-size: 30px;
 	}
-	
-	#item-price{
+
+	#item-price {
 		margin-top: 15px;
 	}
-	
-	#item-button{
+
+	#item-button {
 		margin-top: 15px;
 		width: 290px;
 	}
