--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -105,10 +105,11 @@ p{
 	background-color: hsl(158, 36%, 37%);
 	height: 48px;
 	width: 240px;
-	border-radius: 10px;
+	border-radius: 8px;
 }
 
 #item-button>div {
+	height: 18px;
 	margin-left: 6px;
 	margin-right: 6px;
 }
@@ -122,8 +123,13 @@ p{
 	background-color: hsl(15, 59%, 25%);
 }
 
+#button-icon{
+	width: 14px;
+	background: url("../images/icon-cart.svg") center/14px no-repeat;
+}
+
 #button-text {
-	font: bold 14px 'Montserrat';
+	font: 14px 'Montserrat';
 	color: white;
 }
 
