--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -106,6 +106,8 @@ p{
 	height: 48px;
 	width: 240px;
 	border-radius: 8px;
+	border: none;
+	transition: background-color 0.3s ease;
 }
 
 #item-button>div {
@@ -114,13 +116,11 @@ p{
 	margin-right: 6px;
 }
 
-#item-button:hover {
-	cursor: pointer;
-	background-color: hsl(156, 59%, 25%);
-}
-
-#item-button:focus {
-	background-color: hsl(15, 59%, 25%);
+@media(hover:hover){
+	#item-button:hover {
+		cursor: pointer;
+		background-color: hsl(156, 59%, 25%);
+	}
 }
 
 #button-icon{
